apps/freelance-agency/base/deployment.yaml
# Deployment -> tạo ReplicaSet -> ReplicaSet tạo 2 Pod theo label app=web
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: lab2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web
          image: thanhlamcode/freelance-agency-template:8e3141b2fec20b9739701ea5a19ff05307db2456
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 2
